--- a/drone/code/config.json
+++ b/drone/code/config.json
@@ -1,11 +1,93 @@
 {
-    "name": "test_01",
+    "name": "scenario_04",
+    "scenario": 1,
     "probability_grid":
         {
             "step_sizes": [0.2,0.2,0.2],
-            "min_position": [0.0,0,0],
-            "max_position": [4.0,4,2],
-            "points_per_dim": [20,20,10]
-        } 
-    }
+            "min_position": [0.2,0.2,0.2],
+            "max_position": [3.8,4.6,1.6],
+            "points_per_dim": [19,22,8]
+        },
+
+    "room": "new_room", 
+
+    "room_books":
+        {   
+            "dimensions":
+                {
+                    "min": [0.0,0.0,0.0],
+                    "max": [4.00,4.85,1.80]
+                },
+            "objects":
+                {
+                    "printer": {"dimensions":[3.75,0.17,0.15,0.2,0.15,0.15],"scaling":[1,1,1]},
+                    "bench": {"dimensions":[1.06,2.18,0.23,0.24,0.72,0.23],"scaling":[0.8,0.65,0.7]},
+                    "big table": {"dimensions":[1.66,2.11,0.75,0.36,0.79,0.05],"scaling":[0.7,0.65,2.4]},
+                    "side table": {"dimensions":[1.86,3.25,0.70,0.48,0.32,0.05],"scaling":[0.7,0.7,2.4]},
+                    "arm chair": {"dimensions":[3.30,4.40,0.5,0.45,0.45,0.5],"scaling":[0.7,0.7,0.5]},
+                    "chess board table": {"dimensions":[3.56,2.81,0.19,0.19,0.19,0.19],"scaling":[0.8,1.1,0.9]},
+                    "nespresso box": {"dimensions":[3.87,2.82,1.03,0.13,0.36,0.17],"scaling":[1,0.7,1]},
+                    "chair": {"dimensions":[2.10,2.35,0.51,0.3,0.35,0.51],"scaling":[1,1,1]},
+                    "couch": {"dimensions":[1.85,-0.9,0.39,1.37,0.75,0.39],"scaling":[0.5,0.6,1]},
+                    "computer screen": {"dimensions":[1.45,1.59,1.08,0.15,0.25,0.28],"scaling":[0.9,0.8,0.8]},
+                    "box with newspapers": {"dimensions":[1.20,3.25,0.14,0.22,0.22,0.14],"scaling":[0.8,0.8,0.8]}
+                },
+            "scenarios_commands":
+                {
+                    "1": ["to the right of the arm chair on central height", "to the left of the chess board table slightly higher up close to the front"],
+                    "2": ["directly underneath the center of the side table", "behind the bench on the left on central height", "behind the box with newspapers as high as the top"],
+                    "3": ["front of the shelf with the nespresso box in the center", "behind the chair on the left side as high as the top", "above the chess board table"],
+                    "4": ["directly above the printer","behind the couch on the left as high as the top"],
+                    "5": ["to the right of the computer screen on central height","to the right of the big table higher up"]
+                },
+            "scenarios_target_positions":
+                {
+                    "1": [3.30,3.6,0.5],
+                    "2": [1.86,3.25,0.4],
+                    "3": [3.40,2.82,1.03],
+                    "4": [3.75,0.17,0.7],
+                    "5": [1.45,1.1,1.08]
+                }
+
+
+        },
+
+        "new_room":
+        {   
+            "dimensions":
+                {
+                    "min": [0.0,0.0,0.0],
+                    "max": [4.74,4.68,1.80]
+                },
+            "objects":
+                {
+                    "drawer": {"dimensions": [4.1,0.29,0.59,0.6,0.29,0.59],"scaling": [1,1,1]},
+                    "couch": {"dimensions": [2.13,2.22,0.5,0.45,1.02,0.5],"scaling": [1,1,1]},
+                    "bed": {"dimensions": [3.58,2.33,0.31,1.0,0.93,0.31],"scaling": [1,1,1]},
+                    "desk": {"dimensions": [3.63,4.43,0.39,0.55,0.25,0.39],"scaling": [1,1,1]},
+                    "lamp": {"dimensions": [4.54,3.64,0.70,0.1,0.1,0.24],"scaling": [1,1,1]},
+                    "bedside table": {"dimensions": [4.52,3.6,0.23,0.2,0.2,0.23],"scaling": [1,1,1]},
+                    "computer screen": {"dimensions": [3.62,4.62,1.09,0.32,0.12,0.31],"scaling": [1,1,1]},
+                    "box": {"dimensions": [0.27,2.38,0.19,0.27,0.48,0.19],"scaling": [1,1,1]}
+                },
+            "scenarios_commands":
+                {
+                    "1": ["to the right of the arm chair on central height", "to the left of the chess board table slightly higher up close to the front"],
+                    "2": ["directly underneath the center of the side table", "behind the bench on the left on central height", "behind the box with newspapers as high as the top"],
+                    "3": ["front of the shelf with the nespresso box in the center", "behind the chair on the left side as high as the top", "above the chess board table"],
+                    "4": ["directly above the printer","behind the couch on the left as high as the top"],
+                    "5": ["to the right of the computer screen on central height","to the right of the big table higher up"]
+                },
+            "scenarios_target_positions":
+                {
+                    "1": [3.30,3.6,0.5],
+                    "2": [1.86,3.25,0.4],
+                    "3": [3.40,2.82,1.03],
+                    "4": [3.75,0.17,0.7],
+                    "5": [1.45,1.1,1.08]
+                }
+
+
+        }
+}
         
